# filler

./: .ft_intro.c.swm  .ft_intro.c.swn  .ft_intro.c.swp  .ft_intro.с.swo  .ft_intro.с.swp  CMakeLists.txt  Makefile  README.md  filler.h  filler.trace  ft_infa.c  ft_insertable.c  ft_intro.c  ychufist.filler
libft/: .get_next_line..swp  .get_next_line.р.swp  Makefile  ft_int_arr.c  ft_printf.h  ft_printf.h.gch  get_next_line.c  get_next_line.h  libft.h
resources/: .Ma.swp  .Makefile.swp  Makefile  a.out  filler.h  filler.trace  ft_int_arr.c  ft_intro.c  res  test.txt
resources/libft/: Makefile  ft_printf.h.gch  get_next_line.c  get_next_line.h  libft.h
resources/players/: a.out  ychufist.filler
to_test/players/: a.out  ychufist.filler
