cmake_minimum_required(VERSION 3.12)
project(filler C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(resources)
include_directories(resources/libft)

add_executable(filler
        resources/libft/ft_atoi.c
        resources/libft/ft_bzero.c
        resources/libft/ft_cl.c
        resources/libft/ft_cw.c
        resources/libft/ft_dopfile.c
        resources/libft/ft_dopfile1.c
        resources/libft/ft_flags.c
        resources/libft/ft_foreach.c
        resources/libft/ft_intlength.c
        resources/libft/ft_isalnum.c
        resources/libft/ft_isalpha.c
        resources/libft/ft_isascii.c
        resources/libft/ft_isdigit.c
        resources/libft/ft_isprint.c
        resources/libft/ft_itoa.c
        resources/libft/ft_itoa_unsigned.c
        resources/libft/ft_lstadd.c
        resources/libft/ft_lstdel.c
        resources/libft/ft_lstdelone.c
        resources/libft/ft_lstiter.c
        resources/libft/ft_lstmap.c
        resources/libft/ft_lstnew.c
        resources/libft/ft_memalloc.c
        resources/libft/ft_memccpy.c
        resources/libft/ft_memchr.c
        resources/libft/ft_memcmp.c
        resources/libft/ft_memcpy.c
        resources/libft/ft_memdel.c
        resources/libft/ft_memmove.c
        resources/libft/ft_memset.c
        resources/libft/ft_mmap.c
        resources/libft/ft_new_tout.c
        resources/libft/ft_octflag.c
        resources/libft/ft_params.c
        resources/libft/ft_presflags.c
        resources/libft/ft_print_bigs.c
        resources/libft/ft_print_c.c
        resources/libft/ft_print_id.c
        resources/libft/ft_print_o.c
        resources/libft/ft_print_p.c
        resources/libft/ft_print_s.c
        resources/libft/ft_print_x_u.c
        resources/libft/ft_printf.c
        resources/libft/ft_printf.h
        resources/libft/ft_putchar.c
        resources/libft/ft_putchar_fd.c
        resources/libft/ft_putendl.c
        resources/libft/ft_putendl_fd.c
        resources/libft/ft_putnbr.c
        resources/libft/ft_putnbr_fd.c
        resources/libft/ft_putstr.c
        resources/libft/ft_putstr_fd.c
        resources/libft/ft_sqrt.c
        resources/libft/ft_strcat.c
        resources/libft/ft_strchr.c
        resources/libft/ft_strclr.c
        resources/libft/ft_strcmp.c
        resources/libft/ft_strcpy.c
        resources/libft/ft_strdel.c
        resources/libft/ft_strdup.c
        resources/libft/ft_strequ.c
        resources/libft/ft_striter.c
        resources/libft/ft_striteri.c
        resources/libft/ft_strjoin.c
        resources/libft/ft_strlcat.c
        resources/libft/ft_strlen.c
        resources/libft/ft_strmap.c
        resources/libft/ft_strmapi.c
        resources/libft/ft_strncat.c
        resources/libft/ft_strncmp.c
        resources/libft/ft_strncpy.c
        resources/libft/ft_strnequ.c
        resources/libft/ft_strnew.c
        resources/libft/ft_strnstr.c
        resources/libft/ft_strrchr.c
        resources/libft/ft_strsplit.c
        resources/libft/ft_strstr.c
        resources/libft/ft_strsub.c
        resources/libft/ft_strtrim.c
        resources/libft/ft_swap.c
        resources/libft/ft_tolower.c
        resources/libft/ft_toupper.c
        resources/libft/get_next_line.c
        resources/libft/get_next_line.h
        resources/libft/libft.h
        resources/filler.h
        resources/ft_int_arr.c
        resources/ft_intro.c
        filler.h)
